# upwork-scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  browser.py  jobs.json  pyproject.toml  user_informations.json
src/: main.py
src/application/repos/: job_repository.py  user_repository.py
src/application/usecases/: get_user_informations_usecase.py  get_user_jobs_usecase.py
src/domain/entities/: address.py  client.py  job.py  user.py  user_informations.py
src/infra/dotenv/: env.py
src/infra/selenium/: browser.py  selenium_job_repository.py  selenium_user_repository.py
src/interface/controllers/: get_user_informations_controller.py  get_user_jobs_controller.py
